# nail_backend

./: .env.example  API_DOCS.md  Cargo.toml  README.md
migrations/: 0001_create_initial_tables.sql  0002_add_refresh_tokens_and_social_hash.sql
src/: main.rs
src/application/: admin_service.rs  auth_service.rs  booking_service.rs  mod.rs  payment_service.rs  service_service.rs  user_service.rs
src/domain/: booking.rs  closed_day.rs  common.rs  mod.rs  payment.rs  refresh_token.rs  service.rs  service_category.rs  shop_settings.rs  user.rs  user_social_account.rs
src/infrastructure/: crypto.rs  jwt.rs  mod.rs  stripe_client.rs
src/infrastructure/payment/: kakao_pay.rs  mod.rs  naver_pay.rs
src/infrastructure/social/: kakao.rs  mod.rs  naver.rs
src/presentation/: mod.rs  routes.rs
src/presentation/handlers/: admin_handler.rs  auth_handler.rs  booking_handler.rs  mod.rs  payment_handler.rs  service_handler.rs  user_handler.rs
src/presentation/middleware/: auth_middleware.rs  mod.rs
